v3/crates/metadata-resolve/tests/failing/model_permissions/filter_permissions/comparison_to_array_type/resolve_error.snap
---
source: crates/metadata-resolve/tests/metadata_golden_tests.rs
expression: string
input_file: crates/metadata-resolve/tests/failing/model_permissions/filter_permissions/comparison_to_array_type/metadata.json
---
Error: Error in model permission for model 'Albums (in subgraph subgraphs)' for role 'user': in select filter permissions: field 'ReleaseYears' of type 'Album (in subgraph subgraphs)' used in a field comparison is an array type and therefore cannot be compared to a single value
    ╭─[ <unknown>:38:32 ]
    │
 34 │                 "role": "user",
    │                         ───┬──  
    │                            ╰──── Error in model permission for the role 'user' on the model 'Albums'
    │ 
 38 │                       "field": "ReleaseYears",
    │                                ───────┬──────  
    │                                       ╰──────── The type of this field ([String!]!) is an array type and therefore it cannot be compared to a single value
────╯
